# mcp-demo

./: README.md  agent.py  operations.py  pyproject.toml  requirements.txt  sku_data.csv
