[project]
name = "inventory"
version = "0.1.0"
description = "MCP demo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.3.4",
    "google-genai>=1.15.0",
    "httpx>=0.28.1",
    "langchain-google-vertexai>=2.0.24",
    "langchain-mcp-adapters>=0.1.0",
    "langgraph>=0.4.5",
    "pytz>=2025.2",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
a2a-samples = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
